[project]
name = "store-sales-forecasting"
version = "0.1.0"
description = "Walmart Recruiting - Store Sales Forecasting"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=3.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "jupyter>=1.0",
    "wandb>=0.16",
    "lightgbm>=4.1",
    "xgboost>=2.0",
    "statsmodels>=0.14",
    "prophet>=1.1",
    "neuralforecast>=1.7",
    "pytorch-lightning>=2.1",
    "kaggle>=1.6",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "timesfm>=2.0.2",
]
